          - IUserAttributeAwareRecommender: remove set from NumUserAttributes
          - IItemAttributeAwareRecommender: remove set from NumItemAttributes
        - recommenders
          - UserAverage, ItemAverage, GlobalAverage: support LoadModel() and
            SaveModel()
          - merge functionality of BiasedMatrixFactorizationMAE into
            BiasedMatrixFactorization
          - SlopeOne: get rid of unnecessary String.Format() call
          - simple recommenders: avoid reimplementation of ToString() method
        - command-line tools
          - --find-iter=N: explicitly state that the last number refers to the
            number of iterations computed so far
          - rating prediction:
            - add user-defined prediction format via the --prediction-line
              argument
            - get rid of --min-rating and --max-rating, it is now automatically
              read from the data
          - item prediction:
            - always obey --relevant-users=FILE and --relevant-items=FILE
              arguments
            - improved error messages
        - evaluation
          - add "filtered evaluation" protocol for item recommendation:
            for every user, compute recommendation quality for item sets
            filtered according to given attributes: Eval.ItemsFiltered
        - misc
          - MatrixUtils: rename RowInitNormal(m, d, d) to InitNormal() - "row"
            made no sense here

1.03	2011-06-22
        - IMPORTANT ANNOUNCEMENT: This may be the last version to support
          Mono 2.6. If you use MyMediaLite and rely on running it on Mono 2.6,
          please contact the authors: mymedialite@ismll.de.
        - web service API
          - add prototype for a SOAP web service for rating prediction, plus
            three test script
        - API changes
          - IRatingPredictor
           - Add() is now AddRating()
           - remove AddUser() and AddItem()
          - IItemRecommender