@@ -112,8 +112,8 @@ namespace MyMediaLite.ItemRecommendation
 				}
 			}
 
-			this.item_attribute_weight_by_user = new Matrix<double>(MaxUserID + 1, NumItemAttributes);
-			MatrixUtils.InitNormal(item_attribute_weight_by_user, init_mean, init_stdev);
+			item_attribute_weight_by_user = new Matrix<double>(MaxUserID + 1, NumItemAttributes);
+			MatrixUtils.InitNormal(item_attribute_weight_by_user, InitMean, InitStdev);
 
 			for (uint i = 0; i < NumIter; i++)
 				Iterate();
